--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       <section class="section product" id="burgers">
         <div class="container product__container">
           <div class="product__content">
+
             <div class="arrow arrow_left">
               <a href="#" id='arrow-left' class="arrow__link">
                 <svg class="arrow__icon">
@@ -159,78 +160,78 @@
               </a>
             </div>
 
+            <div class="popup" id="modal">
+                <div class="popup__container">
+                  <div class="popup__picture">
+                    <svg class="popup__picture-icon">
+                      <use xlink:href="./sprite.svg#burger-icon"></use>
+                    </svg>
+                  </div>
+                  <p class="popup__picture-name">Состав</p>
+                </div>
+                <div class="popup__content">
+                  <ul class="popup__list">
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#beef-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Говядина</p>
+                      <p class="popup__item-gramm">300 г</p>
+                    </li>
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#buns-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Булочки</p>
+                      <p class="popup__item-gramm">100 г</p>
+                    </li>
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#salad-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Зелень</p>
+                      <p class="popup__item-gramm">70 г</p>
+                    </li>
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#sauce-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Соус</p>
+                      <p class="popup__item-gramm">150 г</p>
+                    </li>
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#cucumber-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Овощи</p>
+                      <p class="popup__item-gramm">200 г</p>
+                    </li>
+                    <li class="popup__item">
+                      <svg class="popup__item-icon">
+                        <use xlink:href="./sprite.svg#cheese-icon"></use>
+                      </svg>
+                      <p class="popup__item-title">Сыр</p>
+                      <p class="popup__item-gramm">80 г</p>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+
+            <div class="slider__kkal">
+              <svg class="slider__kkal-icon">
+                <use xlink:href="./sprite.svg#kkal-icon"></use>
+              </svg>
+              <p class="slider__kkal-quan">1200</p>
+              <p class="slider__kkal-name">Ккал</p>
+            </div>
+
             <div class="slider">
               <ul class="slider__list">
+
                 <li class="slider__item">
                   <div class="slider__left">
-
-                    <div class="popup" id="modal">
-                        <div class="popup__container">
-                          <div class="popup__picture">
-                            <svg class="popup__picture-icon">
-                              <use xlink:href="./sprite.svg#burger-icon"></use>
-                            </svg>
-                          </div>
-                          <p class="popup__picture-name">Состав</p>
-                        </div>
-                        <div class="popup__content">
-                          <ul class="popup__list">
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#beef-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Говядина</p>
-                              <p class="popup__item-gramm">300 г</p>
-                            </li>
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#buns-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Булочки</p>
-                              <p class="popup__item-gramm">100 г</p>
-                            </li>
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#salad-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Зелень</p>
-                              <p class="popup__item-gramm">70 г</p>
-                            </li>
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#sauce-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Соус</p>
-                              <p class="popup__item-gramm">150 г</p>
-                            </li>
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#cucumber-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Овощи</p>
-                              <p class="popup__item-gramm">200 г</p>
-                            </li>
-                            <li class="popup__item">
-                              <svg class="popup__item-icon">
-                                <use xlink:href="./sprite.svg#cheese-icon"></use>
-                              </svg>
-                              <p class="popup__item-title">Сыр</p>
-                              <p class="popup__item-gramm">80 г</p>
-                            </li>
-                          </ul>
-                        </div>
-                    </div>
-
                     <div class="slider__burger">
                       <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
-                    </div>
-
-                    <div class="slider__kkal">
-                      <svg class="slider__kkal-icon">
-                        <use xlink:href="./sprite.svg#kkal-icon"></use>
-                      </svg>
-                      <p class="slider__kkal-quan">1200</p>
-                      <p class="slider__kkal-name">Ккал</p>
                     </div>
                   </div>
 
@@ -252,6 +253,111 @@
                     </div>
                   </div>
                 </li>
+
+                <li class="slider__item">
+                  <div class="slider__left">
+                    <div class="slider__burger">
+                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                    </div>
+                  </div>
+
+                  <div class="slider__right">
+                    <div class="slider__title">
+                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                    </div>
+                    <div class="slider__description">
+                      <p class="slider__description-text">
+                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
+                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                      </p>
+                    </div>
+                    <div class="slider__price">
+                      <h2 class="slider__price-digits">500</h2>
+                      <h3 class="slider__price-currency">рублей</h3>
+                      <a href="#order" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="slider__item">
+                  <div class="slider__left">
+                    <div class="slider__burger">
+                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                    </div>
+                  </div>
+
+                  <div class="slider__right">
+                    <div class="slider__title">
+                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                    </div>
+                    <div class="slider__description">
+                      <p class="slider__description-text">
+                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
+                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                      </p>
+                    </div>
+                    <div class="slider__price">
+                      <h2 class="slider__price-digits">500</h2>
+                      <h3 class="slider__price-currency">рублей</h3>
+                      <a href="#order" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="slider__item">
+                  <div class="slider__left">
+                    <div class="slider__burger">
+                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                    </div>
+                  </div>
+
+                  <div class="slider__right">
+                    <div class="slider__title">
+                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                    </div>
+                    <div class="slider__description">
+                      <p class="slider__description-text">
+                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
+                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                      </p>
+                    </div>
+                    <div class="slider__price">
+                      <h2 class="slider__price-digits">500</h2>
+                      <h3 class="slider__price-currency">рублей</h3>
+                      <a href="#order" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="slider__item">
+                  <div class="slider__left">
+                    <div class="slider__burger">
+                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                    </div>
+                  </div>
+
+                  <div class="slider__right">
+                    <div class="slider__title">
+                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                    </div>
+                    <div class="slider__description">
+                      <p class="slider__description-text">
+                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
+                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                      </p>
+                    </div>
+                    <div class="slider__price">
+                      <h2 class="slider__price-digits">500</h2>
+                      <h3 class="slider__price-currency">рублей</h3>
+                      <a href="#order" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </li>
+
               </ul>
             </div>
             <div class="arrow arrow_right">
@@ -735,6 +841,7 @@
     <!-- wrapper closed -->
   </div>
   <script src="js/hamburger-menu.js"></script>
+  <script src="js/product-slider.js"></script>
   <script src="js/product-popup.js"></script>
   <script src="js/acco.js"></script>
 </body>
