--- a/index.html
+++ b/index.html
@@ -241,9 +241,10 @@
                     </div>
                     <div class="slider__description">
                       <p class="slider__description-text">
-                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
-                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
-                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                        Пышная черная булочка, сочная котлета из мраморной говядины, хрустящий копченый бекон
+                        индейки, жареные с луком грибы в соусе демиглас, спелые помидоры, два вида
+                        сыров: нежный фета и чеддер, кольца красного лука, листья салата, карамелизированная груша,
+                        смородиновый джем, соус релиш, наш фирменный соус с трюфельным маслом и паштет из фуагра.
                       </p>
                     </div>
                     <div class="slider__price">
@@ -257,13 +258,13 @@
                 <li class="slider__item">
                   <div class="slider__left">
                     <div class="slider__burger">
-                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                      <img src="./images/slider-2.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
                     </div>
                   </div>
 
                   <div class="slider__right">
                     <div class="slider__title">
-                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                      <h1 class="section-title section-title_white section-title_product">Prime Burger</h1>
                     </div>
                     <div class="slider__description">
                       <p class="slider__description-text">
@@ -273,7 +274,7 @@
                       </p>
                     </div>
                     <div class="slider__price">
-                      <h2 class="slider__price-digits">500</h2>
+                      <h2 class="slider__price-digits">720</h2>
                       <h3 class="slider__price-currency">рублей</h3>
                       <a href="#order" class="btn product__btn">Заказать</a>
                     </div>
@@ -283,23 +284,23 @@
                 <li class="slider__item">
                   <div class="slider__left">
                     <div class="slider__burger">
-                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                      <img src="./images/slider-3.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
                     </div>
                   </div>
 
                   <div class="slider__right">
                     <div class="slider__title">
-                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                      <h1 class="section-title section-title_white section-title_product">Camamber Burger</h1>
                     </div>
                     <div class="slider__description">
                       <p class="slider__description-text">
-                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
-                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
-                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                        Ваша любимая булочка, фирменный соус с трюфельным маслом, соус-крем бальзамик,
+                        сыр камамбер, котлета из мраморной говядины праймбиф, маринованные огурцы,
+                        кольца красного лука, листья салата, соус гавая.
                       </p>
                     </div>
                     <div class="slider__price">
-                      <h2 class="slider__price-digits">500</h2>
+                      <h2 class="slider__price-digits">390</h2>
                       <h3 class="slider__price-currency">рублей</h3>
                       <a href="#order" class="btn product__btn">Заказать</a>
                     </div>
@@ -309,23 +310,24 @@
                 <li class="slider__item">
                   <div class="slider__left">
                     <div class="slider__burger">
-                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                      <img src="./images/slider-4.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
                     </div>
                   </div>
 
                   <div class="slider__right">
                     <div class="slider__title">
-                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                      <h1 class="section-title section-title_white section-title_product">El Classico Burger</h1>
                     </div>
                     <div class="slider__description">
                       <p class="slider__description-text">
-                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
-                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
-                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                        Неизменно любимая вечная классика: тающая во рту домашняя булочка,
+                        сочная котлета из мраморной говядины, или индейки, хрустящий копчёный
+                        бекон индейки, маринованные огурцы, кольца красного лука, сыр чеддер,
+                        спелые помидоры, листья салата и наш фирменный соус с трюфельным маслом.
                       </p>
                     </div>
                     <div class="slider__price">
-                      <h2 class="slider__price-digits">500</h2>
+                      <h2 class="slider__price-digits">450</h2>
                       <h3 class="slider__price-currency">рублей</h3>
                       <a href="#order" class="btn product__btn">Заказать</a>
                     </div>
@@ -335,23 +337,24 @@
                 <li class="slider__item">
                   <div class="slider__left">
                     <div class="slider__burger">
-                      <img src="./images/slider-1.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
+                      <img src="./images/slider-5.png" alt="Бургер с чернилами каракатицы" class="slider__burger-pic">
                     </div>
                   </div>
 
                   <div class="slider__right">
                     <div class="slider__title">
-                      <h1 class="section-title section-title_white section-title_product">Dark Beef Burger</h1>
+                      <h1 class="section-title section-title_white section-title_product">Veggy Burger</h1>
                     </div>
                     <div class="slider__description">
                       <p class="slider__description-text">
-                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины,
-                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
-                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                        Ничего лишнего, только сырные шарики из двух видов сыра – моцарелла и чеддер,
+                        спелые помидоры, листья салата, бабагануш, соус зеленый карри, релиш и наша
+                        фирменная заправка с трюфельным маслом. Весь этот вегетарианский рай обрамляет
+                        пышная свежайшая булочка.
                       </p>
                     </div>
                     <div class="slider__price">
-                      <h2 class="slider__price-digits">500</h2>
+                      <h2 class="slider__price-digits">255</h2>
                       <h3 class="slider__price-currency">рублей</h3>
                       <a href="#order" class="btn product__btn">Заказать</a>
                     </div>
